# OpenEnroth

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luarc.json  1.diff  AbstractConfigValue_8h.html  AccessibleVector_8h.html  ActorEnumFunctions_8h.html  ActorEnums_8h.html  ActorTapeRecorder_8cpp.html  ActorTapeRecorder_8h.html  Actor_8cpp.html  Actor_8h.html  AndroidEnvironment_8cpp.html  AndroidEnvironment_8h.html  AnyConfigEntry_8cpp.html  AnyConfigEntry_8h.html  AnyHandler_8h.html  AnySerializer_8h.html  Api_8h.html  AppSettings_8cpp.html  AppleLibcxxAssertionTest_8cpp.html  AppleLibcxxAssertionWorkaround_8cpp.html  Application_2IocContainer_8cpp.html  Application_2IocContainer_8h.html  ArchiveReader_8cpp.html  ArchiveReader_8h.html  ArcomageCards_8cpp.html  Arcomage_8cpp.html  Arcomage_8h.html  ArenaEnumFunctions_8h.html  ArenaEnums_8h.html  ArraySerialization_8h.html  Ascii_8cpp.html  Ascii_8h.html  Ascii__ut_8cpp.html  AssetsManager_8cpp.html  AssetsManager_8h.html  (+3905 more)
Engine/: AssetLocator.cpp  AssetLocator.h  AssetsClass.h  AssetsLocator.cpp  AssetsLocator.h  AssetsManager.cpp  AssetsManager.h  Autonotes.h  Awards.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Conditions.cpp  Conditions.h  Configuration.cpp  Configuration.h  Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  EngineConfigFactory.cpp  EngineConfigFactory.h  EngineFactory.cpp  EngineFactory.h  ErrorHandling.cpp  ErrorHandling.h  Events.cpp  Events.h  Events2D.h  IocContainer.cpp  IocContainer.h  LOD.cpp  LOD.h  Localization.cpp  Localization.h  LodTexture.h  Log.cpp  Log.h  LuaVM.cpp  LuaVM.h  (+44 more)
Engine/Graphics/: BSPModel.cpp  BSPModel.h  CMakeLists.txt  Camera.cpp  Camera.h  ClippingFunctions.cpp  ClippingFunctions.h  Collisions.cpp  Collisions.h  Configuration.cpp  Configuration.h  DecalBuilder.cpp  DecalBuilder.h  DecorationList.cpp  DecorationList.h  HWLContainer.cpp  HWLContainer.h  IRender.h  IRenderConfig.cpp  IRenderConfig.h  IRenderConfigFactory.cpp  IRenderConfigFactory.h  IRenderFactory.cpp  IRenderFactory.h  Image.cpp  Image.h  ImageFormatConverter.h  ImageLoader.cpp  ImageLoader.h  Indoor.cpp  Indoor.h  IndoorCameraD3D.cpp  IndoorCameraD3D.h  LightmapBuilder.cpp  LightmapBuilder.h  Lights.h  LightsStack.cpp  LightsStack.h  Nuklear.cpp  Nuklear.h  (+36 more)
Engine/Lod/: CMakeLists.txt  Directory.h  File.h  Header.h  Lod.cpp  Lod.h  LodIconsBitmaps.h  LodSprites.h  LodUtils.cpp  LodUtils.h  LodWriter.h  Reader.cpp  Reader.h  Utils.cpp  Utils.h  Version.h  Writer.h
Engine/Objects/: Actor.cpp  Actor.h  CMakeLists.txt  Chest.cpp  Chest.h  ItemEnchantment.h  ItemEnums.h  ItemTable.h  Items.cpp  Items.h  Monsters.cpp  Monsters.h  NPC.cpp  NPC.h  NPCProf.h  ObjectList.cpp  ObjectList.h  Player.cpp  Player.h  Player.swig  PlayerEnums.h  SpriteObject.cpp  SpriteObject.h  SpriteObjectType.h
Engine/Serialization/: CMakeLists.txt  LegacyImages.cpp  LegacyImages.h  MemoryInput.h
Engine/Spells/: CMakeLists.txt  CastSpellInfo.cpp  CastSpellInfo.h  Spells.cpp  Spells.h
Engine/Tables/: CMakeLists.txt  FactionTable.cpp  FactionTable.h  FrameTableInc.cpp  FrameTableInc.h  IconFrameTable.cpp  IconFrameTable.h  PlayerFrameTable.cpp  PlayerFrameTable.h  StorylineTextTable.cpp  StorylineTextTable.h  TileFrameTable.h  TileTable.cpp
Engine/TurnEngine/: CMakeLists.txt  TurnEngine.cpp  TurnEngine.h
GUI/: CMakeLists.txt  GUIButton.cpp  GUIButton.h  GUIDialogues.h  GUIFont.cpp  GUIFont.h  GUIProgressBar.cpp  GUIProgressBar.h  GUIWindow.cpp  GUIWindow.h
GUI/NewUI/: MainMenu.cpp  MainMenu.h  NewUIMainMenu.cpp  NewUIMainMenu.h
GUI/UI/: Chest.cpp  Spellbook.cpp  Spellbook.h  UIArena.cpp  UIArena.h  UIBooks.cpp  UIBooks.h  UICharacter.cpp  UICharacter.h  UIChest.cpp  UIChest.h  UICredits.cpp  UICredits.h  UIDialogue.cpp  UIDialogue.h  UIGame.cpp  UIGame.h  UIGuilds.cpp  UIGuilds.h  UIHouseDialogueMenu.h  UIHouses.cpp  UIHouses.h  UIInventory.cpp  UIInventory.h  UIMainMenu.cpp  UIMainMenu.h  UIModal.cpp  UIModal.h  UIPartyCreation.cpp  UIPartyCreation.h  UIPopup.cpp  UIPopup.h  UIQuickReference.cpp  UIQuickReference.h  UIRest.cpp  UIRest.h  UISaveLoad.cpp  UISaveLoad.h  UIShops.cpp  UIShops.h  (+7 more)
IO/: CMakeLists.txt  GameKey.cpp  GameKey.h  IKeyboardController.h  IMouseController.h  IUserInputProvider.h  InputAction.cpp  InputAction.h  Keyboard.cpp  Keyboard.h  KeyboardActionMapping.cpp  KeyboardActionMapping.h  KeyboardInputHandler.cpp  KeyboardInputHandler.h  Mouse.cpp  Mouse.h  UserInputHandler.cpp  UserInputHandler.h
Io/: CMakeLists.txt  GameKey.cpp  GameKey.h  InputAction.cpp  InputAction.h  KeyboardActionMapping.cpp  KeyboardActionMapping.h  KeyboardInputHandler.cpp  KeyboardInputHandler.h  Mouse.cpp  Mouse.h
Launcher/Launcher.Windows/: CMakeLists.txt  Launcher.Windows.vcxproj  Launcher.Windows.vcxproj.filters  Resource.aps  Resource.rc  resource.h
Media/: CMakeLists.txt  Media.cpp  Media.h  MediaPlayer.cpp  MediaPlayer.h
Media/Audio/: AIL.cpp  AIL.h  AudioPlayer.cpp  AudioPlayer.h  OpenALSoundProvider.cpp  OpenALSoundProvider.h
Media/Video/: Bink_Smacker.cpp  Bink_Smacker.h
Platform/: Api.h  CMakeLists.txt  OSWindow.cpp  OSWindow.h  OSWindowFactory.cpp  OSWindowFactory.h  OpenGL.h  Path.h  SDLmain.cpp  Sdl2KeyboardController.cpp  Sdl2KeyboardController.h  Sdl2MouseController.h  Sdl2Platform.cpp  Sdl2Platform.h  Sdl2UserInputProvider.cpp  Sdl2UserInputProvider.h  Sdl2Window.cpp  Sdl2Window.h  WinApiWindow.cpp  WinApiWindow.h
Platform/Lin/: Lin.cpp  Lin.h
Platform/Win/: AppEntry.cpp  AppSettings.cpp  CdCheck.cpp  Win.cpp  Win.h  WinOSWindow.cpp  WinOSWindow.h
bazel/cmrc/: BUILD.bazel  generate_lib.py  generate_resource.py
bazel/system/: BUILD.bazel  prebuilt_android.BUILD  prebuilt_posix.BUILD  prebuilt_windows.BUILD
resources/: BUILD.bazel  CMakeLists.txt  mmbindings_def.lua
resources/scripts/: BUILD.bazel  CMakeLists.txt  bindings_definition.lua  console.lua  init.lua  logger.lua  mm_library_definition.lua  mmbindings.lua  utils.lua
resources/shaders/: fog.glsl  (+36 more)
src/: BUILD.bazel  CMakeLists.txt
test/: CMakeLists.txt  test.cpp  test.h  test_libraries_deployment.cpp
(+2196 files in other folders)
