"""OpenEnroth Bazel module definition."""

module(
    name = "openenroth",
    version = "0.0.0",
)

# ─── Core Bazel rules ────────────────────────────────────────────────────────

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# ─── Testing ─────────────────────────────────────────────────────────────────

bazel_dep(name = "googletest", version = "1.15.2")

# ─── rules_foreign_cc — wraps CMake/Make deps (used for LuaJIT, SDL3, etc.) ──

bazel_dep(name = "rules_foreign_cc", version = "0.11.1")

# ─── Android ─────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_android", version = "0.6.0")

# ─── Non-BCR deps via http_archive ───────────────────────────────────────────
# sha256 fields are intentionally left empty for the initial scaffold.
# On first `bazel build`, Bazel will print the correct sha256 for each archive.
# Fill them in to make the build hermetic.

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Header-only deps ----------------------------------------------------------

http_archive(
    name = "glm",
    url = "https://github.com/g-truc/glm/archive/0af55ccecd98d4e5a8d1fad7de25ba429d60e863.tar.gz",
    strip_prefix = "glm-0af55ccecd98d4e5a8d1fad7de25ba429d60e863",
    build_file = "//bazel/deps:glm.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "magic_enum",
    url = "https://github.com/Neargye/magic_enum/archive/d01a4f90a63444e910e66c796b93df25abffcfe0.tar.gz",
    strip_prefix = "magic_enum-d01a4f90a63444e910e66c796b93df25abffcfe0",
    build_file = "//bazel/deps:magic_enum.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "fast_float",
    url = "https://github.com/fastfloat/fast_float/archive/1ea4f27b2aeee2859a1354a3c24cff52a116cad1.tar.gz",
    strip_prefix = "fast_float-1ea4f27b2aeee2859a1354a3c24cff52a116cad1",
    build_file = "//bazel/deps:fast_float.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "mio",
    url = "https://github.com/mandreyel/mio/archive/8b6b7d878c89e81614d05edca7936de41ccdd2da.tar.gz",
    strip_prefix = "mio-8b6b7d878c89e81614d05edca7936de41ccdd2da",
    build_file = "//bazel/deps:mio.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "nlohmann_json",
    url = "https://github.com/nlohmann/json/archive/55f93686c01528224f448c19128836e7df245f72.tar.gz",
    strip_prefix = "json-55f93686c01528224f448c19128836e7df245f72",
    build_file = "//bazel/deps:nlohmann_json.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "cli11",
    url = "https://github.com/CLIUtils/CLI11/archive/95324820650117a2668ed63b095007068fd0c475.tar.gz",
    strip_prefix = "CLI11-95324820650117a2668ed63b095007068fd0c475",
    build_file = "//bazel/deps:cli11.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "inifile_cpp",
    url = "https://github.com/Rookfighter/inifile-cpp/archive/7bb1ec3534768e0d1fd9893d01027468b72af5ec.tar.gz",
    strip_prefix = "inifile-cpp-7bb1ec3534768e0d1fd9893d01027468b72af5ec",
    build_file = "//bazel/deps:inifile_cpp.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "tcpp",
    url = "https://github.com/bnoazx005/tcpp/archive/8041d013d3ad97c95c1e857f0bd3f8008becb72e.tar.gz",
    strip_prefix = "tcpp-8041d013d3ad97c95c1e857f0bd3f8008becb72e",
    build_file = "//bazel/deps:tcpp.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "small_vector",
    url = "https://github.com/gharveymn/small_vector/archive/e8e63fe12ef578528ca5e954bc91321967e76393.tar.gz",
    strip_prefix = "small_vector-e8e63fe12ef578528ca5e954bc91321967e76393",
    build_file = "//bazel/deps:small_vector.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "lambda2",
    url = "https://github.com/boostorg/lambda2/archive/dddfec608515f5a4f51f86d9b8efc01c7ad816cc.tar.gz",
    strip_prefix = "lambda2-dddfec608515f5a4f51f86d9b8efc01c7ad816cc",
    build_file = "//bazel/deps:lambda2.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "generator",
    url = "https://github.com/TartanLlama/generator/archive/2a912502de4f97dcba4f95c958ee0ddf7bc22cf5.tar.gz",
    strip_prefix = "generator-2a912502de4f97dcba4f95c958ee0ddf7bc22cf5",
    build_file = "//bazel/deps:generator.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "gtest_parallel",
    url = "https://github.com/google/gtest-parallel/archive/96f4f904922f9bf66689e749c40f314845baaac8.tar.gz",
    strip_prefix = "gtest-parallel-96f4f904922f9bf66689e749c40f314845baaac8",
    build_file = "//bazel/deps:gtest_parallel.BUILD",
    # sha256 = "",  # TODO: fill in
)

# Built deps -----------------------------------------------------------------

http_archive(
    name = "fmt",
    url = "https://github.com/fmtlib/fmt/archive/e3ddede6c4ee818825c4e5a6dfa1d384860c27d9.tar.gz",
    strip_prefix = "fmt-e3ddede6c4ee818825c4e5a6dfa1d384860c27d9",
    build_file = "//bazel/deps:fmt.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "spdlog",
    url = "https://github.com/gabime/spdlog/archive/79524ddd08a4ec981b7fea76afd08ee05f83755d.tar.gz",
    strip_prefix = "spdlog-79524ddd08a4ec981b7fea76afd08ee05f83755d",
    build_file = "//bazel/deps:spdlog.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "sol2",
    url = "https://github.com/ThePhD/sol2/archive/336f76c3772c84e347a7f4ffb246d8c0e2d5f426.tar.gz",
    strip_prefix = "sol2-336f76c3772c84e347a7f4ffb246d8c0e2d5f426",
    build_file = "//bazel/deps:sol2.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "imgui",
    url = "https://github.com/ocornut/imgui/archive/1f7f1f54af38b0350d8c0008b096a9af6de299c7.tar.gz",
    strip_prefix = "imgui-1f7f1f54af38b0350d8c0008b096a9af6de299c7",
    build_file = "//bazel/deps:imgui.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "backward_cpp",
    url = "https://github.com/OpenEnroth/backward-cpp/archive/51f0700452cf71c57d43c2d028277b24cde32502.tar.gz",
    strip_prefix = "backward-cpp-51f0700452cf71c57d43c2d028277b24cde32502",
    build_file = "//bazel/deps:backward_cpp.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "ztd_text",
    url = "https://github.com/captainurist/ztd_text/archive/c7b7cd6c97db63042037c14b0e96302c4eb1888e.tar.gz",
    strip_prefix = "ztd_text-c7b7cd6c97db63042037c14b0e96302c4eb1888e",
    build_file = "//bazel/deps:ztd_text.BUILD",
    # sha256 = "",  # TODO: fill in
)

# LuaJIT — two-stage build (buildvm host → target bytecode) -----------------

http_archive(
    name = "luajit",
    url = "https://github.com/LuaJIT/LuaJIT/archive/97813fb924edf822455f91a5fbbdfdb349e5984f.tar.gz",
    strip_prefix = "LuaJIT-97813fb924edf822455f91a5fbbdfdb349e5984f",
    build_file = "//bazel/deps:luajit.BUILD",
    # sha256 = "",  # TODO: fill in
)

http_archive(
    name = "luajit_cmake",
    url = "https://github.com/zhaozg/luajit-cmake/archive/64462217e05164b46ca44c10ed1d12918eee8fa5.tar.gz",
    strip_prefix = "luajit-cmake-64462217e05164b46ca44c10ed1d12918eee8fa5",
    build_file = "//bazel/deps:luajit_cmake.BUILD",
    # sha256 = "",  # TODO: fill in
)

# System deps (SDL3, OpenAL, ZLIB, PNG, FFmpeg) — Phase 5 -------------------
# TODO: Replace with http_archive pointing to OpenEnroth_Dependencies releases
# or with rules_foreign_cc source builds.
# For now, these are resolved by the platform toolchain / sysroot.
